add missing apis
