# api/api.yml
@@ -8,31 +8,30 @@ components:
       type: object
       required:
         - name
-        - state
+        - ownerId
+        - estimation
+        - reminderPeriod
       properties:
         name:
           type: string
-        state:
+        ownerId:
           type: string
-          enum: [ planned, active, done, failed ]
-          default: planned
+        estimation:
+          type: number
+          format: float
+        reminderPeriod:
+          type: number
+          format: float
 
     Task:
       allOf:
         - $ref: '#/components/schemas/NewTask'
         - type: object
           required:
-            - "id"
+            - id
           properties:
             id:
               type: string
-            owner:
-              $ref: '#/components/schemas/User'
-            paticipants:
-              type: array
-              items:
-                $ref: '#/components/schemas/User'
-              description: paticipants in the task
 
     User:
       type: object
@@ -55,7 +54,7 @@ paths:
   /tasks:
     post:
       summary: Create new task
-      operationId: createtask
+      operationId: createTask
       requestBody:
         required: true
         content:
@@ -100,9 +99,9 @@ paths:
           description: Internal server error
 
   '/tasks/{id}':
-    put:
-      summary: Update task
-      operationId: updatetask
+    delete:
+      summary: delete task
+      operationId: deleteTask
       parameters:
         - name: id
           in: path
@@ -110,23 +109,62 @@ paths:
           schema:
             type: string
           required: true
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/NewTask'
       responses:
-        '204':
-          description: task is updated
+        '201':
+          description: task is deleted
         '400':
           description: Bad request
         '404':
           description: Not Found
         '500':
           description: Internal server error
-
-  /Users:
+    get:
+      summary: Get task by id
+      operationId: getTask
+      parameters:
+        - name: id
+          in: path
+          description: ID of the user
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
+        '400':
+          description: Bad request
+        '500':
+          description: Internal server error
+  /users:
+    post:
+      summary: Create new user
+      operationId: createUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: user is created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+        '400':
+          description: Bad request
+        '409':
+          description: Conflict in insertion
+        '500':
+          description: Internal server error
     get:
       summary: Get all Users
       operationId: getUsers
@@ -142,6 +180,48 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/User'
+        '400':
+          description: Bad request
+        '500':
+          description: Internal server error
+
+  /users/{id}:
+    delete:
+      summary: delete user
+      operationId: deleteUser
+      parameters:
+        - name: id
+          in: path
+          description: ID of the user
+          schema:
+            type: string
+          required: true
+      responses:
+        '201':
+          description: user is deleted
+        '400':
+          description: Bad request
+        '404':
+          description: Not Found
+        '500':
+          description: Internal server error
+    get:
+      summary: Get User by id
+      operationId: getUser
+      parameters:
+        - name: id
+          in: path
+          description: ID of the user
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
         '400':
           description: Bad request
         '500':
