# service/create_task.go
@@ -3,42 +3,35 @@ package service
 import (
 	"errors"
 	"github.com/mohamedveron/task_management/domains"
-	"math/rand"
 )
 
-func (s *Service) CreateTask(task domains.Task) (string, error){
+func (s *Service) CreateTask(task domains.Task) (string, error) {
 
 	// generate new id
-	id := randGeneratePassword(4)
+	id := RandGeneratePassword(4)
 
 	task.ID = id
 
 	s.tasksDB[id] = task
 
-	owner := s.findUserById(task.Owner.ID)
+	owner, err := s.GetUserById(task.Owner.ID)
 
-	updatedTask := domains.Task{
-		ID:           task.ID,
-		Name:         task.Name,
-		Owner:       *owner,
-		State:        task.State,
+	newTask := domains.Task{
+		ID:             task.ID,
+		Name:           task.Name,
+		Owner:          *owner,
+		Estimation:     task.Estimation,
+		ReminderPeriod: task.ReminderPeriod,
+		State:          task.State,
 	}
 
-	if owner == nil {
+	if owner == nil || err != nil {
 		return "not exist", errors.New("User not exist")
 	}
 
-	s.tasksDB[id] = updatedTask
+	s.tasksDB[id] = newTask
 
 	return id, nil
 }
 
-func randGeneratePassword(n int) string {
 
-	const letterBytes = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
-	b := make([]byte, n)
-	for i := range b {
-		b[i] = letterBytes[rand.Intn(len(letterBytes))]
-	}
-	return string(b)
-}
